--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,18 +12,23 @@
     "@types/react-calendar": "^3.4.3",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.4",
+    "date-fns": "^2.24.0",
+    "formik": "^2.2.9",
     "mobx": "^6.3.3",
     "mobx-react-lite": "^3.2.1",
     "react": "^17.0.2",
     "react-calendar": "^3.4.0",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "typescript": "^4.4.3",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.1.7",
     "@types/react-router-dom": "^5.3.0",
     "@types/uuid": "^8.3.1"
   }
